force-app/main/default/objects/Account/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>