force-app/main/default/objects/Account/fields/Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>Ocupacion__c</fullName>
    <label>Ocupacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SECTOR PRIVADO</fullName>
            </value>
            <value>
                <fullName>SECTOR PUBLICO</fullName>
            </value>
            <value>
                <fullName>INDEPENDIENTE</fullName>
            </value>
            <value>
                <fullName>JUBILADO</fullName>
            </value>
            <value>
                <fullName>NINGUNO</fullName>
            </value>
            <value>
                <fullName>PROFESIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>