force-app/main/default/objects/Account/fields/Score_Buro__c.field-meta.xml
<CustomField>
    <fullName>Score_Buro__c</fullName>
    <label>Score Buró</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>