force-app/main/default/objects/Account/fields/Tipo_de_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Vivienda__c</fullName>
    <label>Tipo de Vivienda</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrendada</fullName>
            </value>
            <value>
                <fullName>Propia</fullName>
            </value>
            <value>
                <fullName>Vive con Familiares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>